🐛 FIX: spacing, youtube 💎 IMPROVE: search

--- a/assets/styles/general.scss
+++ b/assets/styles/general.scss
@@ -302,12 +302,17 @@ input[type="submit"] {
   height: 0;
   overflow: hidden;
   > iframe,
-  > video {
+  > video,
+  > .embed-youtube {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
+    > iframe {
+      width: 100%;
+      height: 100%;
+    }
   }
 }
 
