--- a/assets/styles/theme-colors.scss
+++ b/assets/styles/theme-colors.scss
@@ -354,6 +354,7 @@ body.page-template,
 
   /* 1.8 SEARCH FORM
   /––––––––––––––––––––––––*/
+  .wp-block-search,
   .search-form {
     input[type="submit"],
     button[type="submit"] {
