--- a/assets/styles/theme-fonts.scss
+++ b/assets/styles/theme-fonts.scss
@@ -559,6 +559,7 @@ body.page-template,
 
 
   // search form
+  .wp-block-search,
   .search-form {
     button[type="submit"],
     input[type="submit"] {
